fix: resolve profile update issues (backend logic & frontend state)